# idea-tree

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: Lightbulb-top-1000-results-embeddings.pickle  Lightbulb-top-1000-results.json  SomebodyMakeThis-top-1000-results-embeddings.pickle  SomebodyMakeThis-top-1000-results.json
idea-tree/: embed.ipynb  idea-tree.ipynb
